--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           </h1>
           <button type="button" class="button">Заказать услугу</button>
         </div>
+        
       </section>
 
       <!--Перечисление профессиональных качеств-->
@@ -141,6 +142,22 @@
                 <h3 class="team-member">Игорь Демьяненко</h3>
                 <p class="team-item">Product Designer</p>
               </div>
+              <div class="social">
+                <ul>
+                  <li>
+                    <a></a><svg></svg>
+                  </li>
+                  <li>
+                    <a><svg></svg>
+                  </li>
+                  <li>
+                    <svg></svg>
+                  </li>
+                  <li>
+                    <svg></svg>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="card">
               <img
@@ -166,6 +183,45 @@
                 <h3 class="team-member">Михаил Ермаков</h3>
                 <p class="team-item">UI Designer</p>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!--Постоянные клиенты-->
+      <section class="clients">
+        <div class="container">
+          <h2 class="section-hdr">Постоянные клиенты</h2>
+          <ul class="client-icons">
+            <li>
+              <svg class="icon">
+                <use href="./images/icons.svg#icon-logo_1"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icon">
+                <use href="./images/icons.svg#icon-logo_2"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icon">
+                <use href="./images/icons.svg#icon-logo_3"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icon">
+                <use href="./images/icons.svg#icon-logo_4"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icon">
+                <use href="./images/icons.svg#icon-logo_5"></use>
+              </svg>
+            </li>
+            <li>
+              <svg class="icon">
+                <use href="./images/icons.svg#icon-logo_6"></use>
+              </svg>
             </li>
           </ul>
         </div>
