--- a/index.html
+++ b/index.html
@@ -314,46 +314,46 @@
           <h2 class="section-hdr">Постоянные клиенты</h2>
           <ul class="client-icons">
             <li class="client-content">
-              <button class="client-button">
+              <a class="client-button">
                 <svg class="button-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-logo_1"></use>
                 </svg>
-              </button>
+              </a>
             </li>
             <li>
-              <button class="client-button">
+              <a class="client-button">
                 <svg class="button-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-logo_2"></use>
                 </svg>
-              </button>
+              </a>
             </li>
             <li>
-              <button class="client-button">
+              <a class="client-button">
                 <svg class="button-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-logo_3"></use>
                 </svg>
-              </button>
+              </a>
             </li>
             <li>
-              <button class="client-button">
+              <a class="client-button">
                 <svg class="button-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-logo_4"></use>
                 </svg>
-              </button>
+              </a>
             </li>
             <li>
-              <button class="client-button">
+              <a class="client-button">
                 <svg class="button-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-logo_5"></use>
                 </svg>
-              </button>
+              </a>
             </li>
             <li>
-              <button class="client-button">
+              <a class="client-button">
                 <svg class="button-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-logo_6"></use>
                 </svg>
-              </button>
+              </a>
             </li>
           </ul>
         </div>
@@ -362,21 +362,55 @@
 
     <!--Подвал страницы-->
     <footer class="footer">
-      <div class="container">
-        <div class="logo-footer">
-          <a href="./index.html" class="logo"
+      <div class="footer-flex container">
+        <div class="footer-communication">
+          <a href="./index.html" class="logo-footer logo"
             >Web<span class="logo-ft-accent">Studio</span></a
           >
+          <address class="footer-info">
+            <p class="footer-addr">г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="mailto:info@example.com" class="contact-footer"
+              >info@example.com</a
+            >
+            <a href="tel:+380991111111" class="contact-footer"
+              >+38 099 111 11 11</a
+            >
+          </address>
         </div>
-        <address class="footer-info">
-          <p class="footer-addr">г. Киев, пр-т Леси Украинки, 26</p>
-          <a href="mailto:info@example.com" class="contact-footer"
-            >info@example.com</a
-          >
-          <a href="tel:+380991111111" class="contact-footer"
-            >+38 099 111 11 11</a
-          >
-        </address>
+
+        <div class="footer-social-list">
+          <h3 class="footer-social-title">присоединяйтесь</h3>
+          <ul class="footer-pages list">
+            <li class="footer-item">
+              <a class="footer-item-link link" href="">
+                <svg class="footer-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-instagram2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-item-link link" href="">
+                <svg class="footer-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-twitter2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-item-link link" href="">
+                <svg class="footer-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-facebook2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-item-link link" href="">
+                <svg class="footer-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-linkedin2"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
