--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
               <a href="./index.html" class="link">Студия</a>
             </li>
             <li class="list-item">
-              <a href="" class="link current">Портфолио</a>
+              <a href="./portfolio.html" class="link current">Портфолио</a>
             </li>
             <li class="list-item"><a href="" class="link">Контакты</a></li>
           </ul>
@@ -32,11 +32,15 @@
         <ul class="contact">
           <li class="contact-item">
             <a href="mailto:info@devstudio.com" class="contact-header"
+              ><svg class="header-icon" width="16px" height="12px">
+                <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="contact-item">
             <a href="tel:+380961111111" class="contact-header"
+              ><svg class="header-icon" width="10px" height="16px">
+                <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
@@ -76,7 +80,7 @@
           <!--Представленные проэкты-->
           <ul class="portfolio-projects list">
             <li class="project">
-              <a href="">
+              <a href="" class="working-project">
                 <img
                   class="image"
                   src="./images/img3_1.jpg"
@@ -91,7 +95,7 @@
             </li>
 
             <li class="project">
-              <a href="">
+              <a href="" class="working-project">
                 <img
                   class="image"
                   src="./images/img3_2.jpg"
@@ -106,7 +110,7 @@
             </li>
 
             <li class="project">
-              <a href="">
+              <a href="" class="working-project">
                 <img
                   class="image"
                   src="./images/img3_3.jpg"
@@ -121,7 +125,7 @@
             </li>
 
             <li class="project">
-              <a href="">
+              <a href="" class="working-project">
                 <img
                   class="image"
                   src="./images/img3_4.jpg"
@@ -136,7 +140,7 @@
             </li>
 
             <li class="project">
-              <a href="">
+              <a href="" class="working-project">
                 <img
                   class="image"
                   src="./images/img3_5.jpg"
@@ -151,7 +155,7 @@
             </li>
 
             <li class="project">
-              <a href="">
+              <a href="" class="working-project">
                 <img
                   class="image"
                   src="./images/img3_6.jpg"
@@ -166,7 +170,7 @@
             </li>
 
             <li class="project">
-              <a href="">
+              <a href="" class="working-project">
                 <img
                   class="image"
                   src="./images/img3_7.jpg"
@@ -181,7 +185,7 @@
             </li>
 
             <li class="project">
-              <a href="">
+              <a href="" class="working-project">
                 <img
                   class="image"
                   src="./images/img3_8.jpg"
@@ -196,7 +200,7 @@
             </li>
 
             <li class="project">
-              <a href="">
+              <a href="" class="working-project">
                 <img
                   class="image"
                   src="./images/img3_9.jpg"
@@ -216,21 +220,55 @@
 
     <!--Подвал страницы-->
     <footer class="footer">
-      <div class="container">
-        <div class="logo-footer">
-          <a href="./index.html" class="logo"
+      <div class="footer-flex container">
+        <div class="footer-communication">
+          <a href="./index.html" class="logo-footer logo"
             >Web<span class="logo-ft-accent">Studio</span></a
           >
+          <address class="footer-info">
+            <p class="footer-addr">г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="mailto:info@example.com" class="contact-footer"
+              >info@example.com</a
+            >
+            <a href="tel:+380991111111" class="contact-footer"
+              >+38 099 111 11 11</a
+            >
+          </address>
         </div>
-        <address class="footer-info">
-          <p class="footer-addr">г. Киев, пр-т Леси Украинки, 26</p>
-          <a href="mailto:info@example.com" class="contact-footer"
-            >info@example.com</a
-          >
-          <a href="tel:+380991111111" class="contact-footer"
-            >+38 099 111 11 11</a
-          >
-        </address>
+
+        <div class="footer-social-list">
+          <h3 class="footer-social-title">присоединяйтесь</h3>
+          <ul class="footer-pages list">
+            <li class="footer-item">
+              <a class="footer-item-link link" href="">
+                <svg class="footer-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-instagram2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-item-link link" href="">
+                <svg class="footer-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-twitter2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-item-link link" href="">
+                <svg class="footer-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-facebook2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-item-link link" href="">
+                <svg class="footer-icon" width="20px" height="20px">
+                  <use href="./images/icons.svg#icon-linkedin2"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
