--- a/index.html
+++ b/index.html
@@ -313,43 +313,43 @@
         <div class="container">
           <h2 class="section-hdr">Постоянные клиенты</h2>
           <ul class="client-icons">
-            <li class="client-content">
-              <a class="client-button">
+            <li class="client-link">
+              <a href="" class="client-button">
                 <svg class="button-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-logo_1"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a class="client-button">
+            <li class="client-link">
+              <a href="" class="client-button">
                 <svg class="button-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-logo_2"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a class="client-button">
+            <li class="client-link">
+              <a href="" class="client-button">
                 <svg class="button-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-logo_3"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a class="client-button">
+            <li class="client-link">
+              <a href="" class="client-button">
                 <svg class="button-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-logo_4"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a class="client-button">
+            <li class="client-link">
+              <a href="" class="client-button">
                 <svg class="button-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-logo_5"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a class="client-button">
+            <li class="client-link">
+              <a href="" class="client-button">
                 <svg class="button-icon" width="106px" height="60px">
                   <use href="./images/icons.svg#icon-logo_6"></use>
                 </svg>
